exports[`snapshots butterchoke 1`] = `
Object {
  "effects": Array [],
  "hearts": 5,
  "ingredients": Array [
    "artichoke",
    "buttermilk",
  ],
  "name": "A Meal",
}
`;

exports[`snapshots dubious cream 1`] = `
Object {
  "effects": Array [],
  "hearts": -5,
  "ingredients": Array [
    "creme",
    "buttermilk",
  ],
  "name": "Dubious Food",
}
`;

exports[`snapshots mushroom and duck fajita 1`] = `
Object {
  "effects": Array [
    Object {
      "buffType": "stealth",
      "duration": 140,
      "level": 2,
      "type": "buff",
    },
    Object {
      "buffType": "coldResist",
      "duration": 24,
      "level": 1,
      "type": "buff",
    },
  ],
  "hearts": 14,
  "ingredients": Array [
    "tortilla",
    "pepper",
    "duck",
    "silentShroom",
  ],
  "name": "A Meal",
}
`;

exports[`snapshots roast duck 1`] = `
Object {
  "effects": Array [],
  "hearts": 6,
  "ingredients": Array [
    "duck",
    "rockSalt",
  ],
  "name": "A Meal",
}
`;

exports[`snapshots veggie fajita 1`] = `
Object {
  "effects": Array [
    Object {
      "buffType": "stealth",
      "duration": 90,
      "level": 2,
      "type": "buff",
    },
    Object {
      "buffType": "coldResist",
      "duration": 24,
      "level": 1,
      "type": "buff",
    },
  ],
  "hearts": 10,
  "ingredients": Array [
    "tortilla",
    "pepper",
    "artichoke",
  ],
  "name": "A Meal",
}
`;
